# rtype

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  RTypeCPackConfig.cmake.in  _a_document_window_8hpp_source.html  _a_entity_property_8hpp_source.html  _bullet_shot_event_8hpp_source.html  _camera_8hpp_source.html  _chrono_8hpp_source.html  _collision_event_8hpp_source.html  _components_8hpp_source.html  _connection_8hpp_source.html  _console_window_8hpp_source.html  _coordinator_8hpp_source.html  _direction_8hpp_source.html  _drawable_8hpp_source.html  _enemy_destroy_event_8hpp_source.html  _enemy_spawner_8hpp_source.html  _entity_factory_8hpp_source.html  _entity_properties_window_8hpp_source.html  _enum_8hpp_source.html  _event_8hpp_source.html  _game_engine_8hpp_source.html  _game_engine_editor_8hpp_source.html  _health_8hpp_source.html  _i_clock_8hpp_source.html  _i_document_window_8hpp_source.html  _icons_font_awesome_8h_source.html  _imgui_style_8hpp_source.html  _main3_d_scene_8hpp_source.html  _math_8hpp_source.html  _message_8hpp_source.html  _metadata_8hpp_source.html  _model_viewer_window_8hpp_source.html  _movement_behaviour_8hpp_source.html  _net_client_8hpp_source.html  (+595 more)
.github/: PULL_REQUEST_TEMPLATE.md  linter.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: TASK.yaml
.github/workflows/: doxygen.yml  release.yaml  test-build-new.yaml
doc/: RFC42.txt
docs/contributing/: contents_list.md
docs/ecs/: README.md  contents_list.md
docs/game_engine/: contents_list.md  ecs.md  editor.md
docs/github/: PULL_REQUEST_TEMPLATE.md  contents_list.md
docs/install/: README.md  contents_list.md
docs/network/: README.md  RFC0001.md  RFC0001.txt  contents_list.md
examples/ecs/: Makefile  main.cpp
include/client/core/: Client.hpp  NetClient.hpp
include/client/entities/: Entity.hpp  EntityFactory.hpp  Objects.hpp
include/client/entities/Ally/: AllyNetwork.hpp
include/client/entities/Bullet/: BulletNetwork.hpp
include/client/entities/Enemy/: EnemyNetwork.hpp
include/client/entities/Player/: PlayerNetwork.hpp
include/client/entities/Skybox/: SkyboxBehavior.hpp
include/client/entities/Spaceship/: SpaceshipNetwork.hpp
include/client/menu/: SkinSelectorBehave.hpp
include/client/utils/: Chrono.hpp  IClock.hpp
include/common/: my_raylib.h
include/common/ecs/: Coordinator.hpp  Entity.hpp  README.md  Signature.hpp  System.hpp
include/common/ecs/components/: Controls.hpp  Drawable.hpp  Physics.hpp
include/common/ecs/systems/: Draw.hpp  Physics.hpp
include/common/game/: NetworkBody.hpp  NetworkMessage.hpp
include/common/game/entities/: Entity.hpp  EntityFactory.hpp  Objects.hpp
include/common/math/vectors/: Vec2.hpp  Vec3.hpp  VecUtils.hpp
include/common/network/: Client.hpp  Connection.hpp  Message.hpp  Server.hpp  TsQueue.hpp  common.hpp  network.hpp
include/common/utils/: Chrono.hpp  IClock.hpp  Math.hpp  UtilsJolt.hpp
include/game_engine/: GameEngine.hpp
include/game_engine/core/: Camera.hpp  Window.hpp
include/game_engine/core/event/: BulletShotEvent.hpp  CollisionEvent.hpp  EnemyDestroyEvent.hpp  Event.hpp  PlayerDestroyEvent.hpp
include/game_engine/ecs/: Components.hpp  Coordinator.hpp  README.md  Scene.hpp  SingletonComponent.hpp  System.hpp
include/game_engine/ecs/components/: Animations.hpp  Audio.hpp  Behaviour.hpp  Direction.hpp  EnemySpawner.hpp  Health.hpp  Input.hpp  Lights.hpp  Metadata.hpp  Network.hpp  NetworkBehaviour.hpp  Physics.hpp  Render.hpp  Shapes.hpp
include/game_engine/ecs/event/: Event.hpp
include/game_engine/ecs/systems/: Animations.hpp  Audio.hpp  Behaviour.hpp  Controls.hpp  Input.hpp  Lights.hpp  Physics.hpp  Render.hpp
include/game_engine/editor/: ADocumentWindow.hpp  GameEngineEditor.hpp  IDocumentWindow.hpp  SceneManagerBridge.hpp
include/game_engine/editor/DocumentWindows/: ConsoleWindow.hpp  EntityPropertiesWindow.hpp  Main3DScene.hpp  ModelViewerWindow.hpp  SceneTreeWindow.hpp
include/game_engine/gui/: ImguiStyle.hpp
include/server/core/: NetServer.hpp  Server.hpp
include/server/entities/: Enum.hpp
include/server/entities/Ally/: AllyNetwork.hpp
include/server/entities/Bullet/: BulletNetwork.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+35 more)
src/client/: CMakeLists.txt  Main.cpp  Makefile  MovementBehavior.hpp  MovementBehaviour.hpp  TestBehavior.hpp  TestBehaviour.hpp  main.cpp
src/client/core/: Client.cpp  NetClient.cpp
src/client/entities/: Entity.cpp  EntityFactory.cpp
src/common/ecs/: CMakeLists.txt  Entity.cpp
src/common/ecs/systems/: Controls.cpp  Draw.cpp  Physics.cpp
src/common/network/: Server.cpp
src/game_engine/: CMakeLists.txt  Editor.cpp  Makefile  Style.cpp  TestBehaviour.hpp  imgui.ini  main.cpp
src/game_engine/core/: GameEngine.cpp  GameEngine.hpp
src/game_engine/core/camera/: Camera.cpp
src/game_engine/core/event/: CollisionEvent.hpp  Event.cpp  Event.hpp
src/game_engine/core/window/: Window.cpp  Window.hpp
src/game_engine/ecs/: Entity.cpp
src/game_engine/ecs/components/: Behaviour.cpp  Shapes.cpp
src/game_engine/ecs/systems/: Animations.cpp  Audio.cpp  Behaviour.cpp  Input.cpp  Lights.cpp  Physics.cpp  Render.cpp
src/game_engine/editor/: GameEngineEditor.cpp  SceneManagerBridge.cpp
src/game_engine/editor/DocumentWindows/: ConsoleWindow.cpp  EntityPropertiesWindow.cpp  Main3DScene.cpp  ModelViewerWindow.cpp  SceneTreeWindow.cpp
src/game_engine/editor/DocumentWindows/EntityProperties/: AEntityProperty.cpp  RenderProperty.cpp  TransformProperty.cpp
src/server/: CMakeLists.txt  Main.cpp  main.cpp
src/server/core/: NetServer.cpp  Server.cpp
(+19 files in other folders)
